Json Object Eklendi

--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,13 @@
       <version>${jackson.core.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20240303</version>
+    </dependency>
+
+
   </dependencies>
 </project>
